web/htdocs/themes/facelift/scss/_wato.scss
/* ... */
/* bulk actions in host table */
.wato table.data tr.data {
  td.bulksearch,
  td.bulkactions {
    padding-top: 25px;
  }

  &:not(:last-child) td.bulksearch,
  &:not(:last-child) td.bulkactions {
    padding: 10px;
  }
}

.wato td.bulkactions {
  text-align: right;

  &.service_discovery {
    text-align: left;
  }

  select {
    width: auto;
  }
}

div#service_container {
  table.data {
    tr.data > td {
      padding: 3px 7px;

      &.state {
        height: 100%;
        padding: 0 1px;
      }

      &.service {
        min-width: 340px;
        overflow-wrap: break-word;
      }

      &.labelstate {
        width: 130px;
        max-width: 130px;
        min-width: 130px;
        overflow-wrap: break-word;
      }

      &.expanding {
        width: 100%;
        min-width: 500px;
      }

      &.plugins {
        min-width: 200px;
      }

      a {
        line-height: 20px;
      }
    }
  }

  h3 {
    img {
      position: relative;
    }
  }
}

div#datasources_container {
  display: grid;
  position: relative;
  margin-bottom: $spacing;
  padding: 12px 16px;
  background-color: $headline-color;

  div.datasources_state {
    position: absolute;
    width: 25px;
    height: 100%;

    span {
      display: flex;
      height: 100%;
      border-radius: $border-radius-left;
      justify-content: center;
      align-items: center;

      img {
        width: 14px;
      }
    }
  }

  div.datasources_output {
    h2 {
      margin: 0 25px 0px;
    }

    &:first-child h2 {
      margin: 0;
    }

    table {
      margin: 5px 25px 0px;

      td {
        padding-right: 5px;
        padding-bottom: 2px;

        b {
          margin: 0;
        }
      }
    }
  }
}

div#fixall_container {
  background-color: $headline-color;
  border-radius: 2px;
  overflow: hidden;

  img {
    margin-left: $spacing;
  }

  ul {
    display: inline-block;
    list-style: none;
    margin: 15px 0 15px 0;
    padding-left: $spacing;
  }

  li {
    display: inline-block;
    padding: 0 $spacing;
    border-right: 1px solid $font-color;
  }

  li:last-child {
    border-right: none;
  }

  a {
    text-decoration: none;

    &:hover {
      opacity: 0.5;
    }
  }

  span {
    padding: 2px;
  }

  span.changed {
    color: $font-color-green;
    font-weight: $font-weight-bold;
  }
}

div#async_progress_msg {
  margin: $spacing 0;

  div.success {
    margin: 0;
  }
}

table.data tr.data > td.bulkactions {
  background: transparent;
  border: none;
}

a.service_button.disabled,
span > img.service_button.disabled {
  &:not(.tooltip) {
    pointer-events: none;
  }

  cursor: default;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  -webkit-filter: grayscale(1);
}

.wato table.data tr.data td.bulksearch {
  padding-right: 0;
  white-space: nowrap;

  div.togglebutton.checkbox {
    margin-left: 0;
  }
}

table.data tr.data > td.bulksearch {
  background: transparent;
  border: none;

  div.togglebutton.checkbox {
    display: inline-block;
    width: 32px;
    height: 32px;
    margin-top: 7px;
    margin-right: 8px;
  }
}

.wato td.bulksearch {
  input[type="text"] {
    width: 150px;
    margin-right: 5px;
  }

  .togglebutton {
    margin-bottom: 0;
  }

  input.text,
  select.text,
  textarea.text,
  .text#mk_side_search_field {
    width: auto;
  }
}

table.data tr.data > td.bulksearch div.togglebutton.checkbox a,
table.data tr.data > td.bulksearch div.togglebutton.checkbox body.main .popup_menu span,
body.main .popup_menu table.data tr.data > td.bulksearch div.togglebutton.checkbox span {
  height: 24px;
  padding: 1.5px;
  box-sizing: border-box;
}

.wato div.floatfolder {
  position: relative;
  left: -14px;
  float: left;
  width: 180px;
  height: 140px;
  background-image: url("images/folder_closed.png");
  background-position: top left;
  background-repeat: no-repeat;

  .autherr {
    position: absolute;
    top: 28px;
    right: 19px;
    z-index: 500;
  }

  div.infos img {
    position: relative;
    top: -1px;
    width: 14px;
    height: 14px;
  }

  .edit {
    position: absolute;
    top: 20px;
    right: 47px;
  }

  div.popup_trigger {
    position: absolute;
    top: 20px;
    right: 25px;
  }

  .delete {
    position: absolute;
    top: 20px;
    right: 3px;
  }

  .infos {
    position: absolute;
    right: 24px;
    bottom: 24px;
    left: 24px;
    overflow: hidden;

    .infos_content {
      right: 0;
      left: 0;
      overflow: hidden;
      color: $font-color-white;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  &.open {
    background-image: url("images/folder_open.png");

    .infos {
      height: 50px;

      .infos_content {
        position: absolute;
        bottom: 0;
      }
    }
  }

  .title {
    position: absolute;
    right: 20px;
    bottom: -4px;
    left: 20px;
    padding: 0;
    overflow: hidden;
    color: $font-color-white;
    text-align: left;
    text-overflow: ellipsis;
    white-space: nowrap;
    -o-text-overflow: ellipsis;

    a {
      position: relative;
      top: -2px;
      text-decoration: none;
    }
  }

  &:hover {
    cursor: pointer;

    a {
      text-decoration: underline;
    }
  }

  &.newfolder {
    font-size: 80px;
    line-height: 145px;
    color: $font-color-light-grey;
    text-align: center;
    opacity: 0.4;
  }
}

.wato div.floatfolder div.title a,
.wato div.floatfolder div.title body.main .popup_menu span,
body.main .popup_menu .wato div.floatfolder div.title span,
.wato div.floatfolder.locked div.title {
  font-weight: $font-weight-default;
  color: $font-color;
}

.wato img.authicon {
  width: 28px;
  height: 28px;
  margin-right: 10px;
  vertical-align: middle;
}

.wato div.popup_menu {
  min-width: 137px;

  select {
    height: auto;
  }
}

.wato div.hoverarea {
  position: relative;
  top: 4px;
  left: 10px;
  z-index: 100;
  width: 154px;
  height: 40px;
}
/* ... */

